--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -184,6 +184,8 @@
 			<button id="ID_LIBRARY_TREE_PHYSICAL" text="مجلدات"/>
 			<button id="ID_LIBRARY_TREE_VIRTUAL" text="تنظيم"/>
 		</toolbar>
+		<toolbar name="CLibraryTree.Physical">
+		</toolbar>
 		<toolbar name="CLibraryTree.Virtual">
 			<button id="ID_LIBRARY_FOLDERS" text="مشاركة الملفات..."/>
 		</toolbar>
@@ -208,6 +210,12 @@
 		<toolbar name="CLibraryHomeView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_NEW" text="إنشاء الألبوم..."/>
 			<button id="ID_LIBRARY_ALBUM_DELETE" text="حذف الألبوم"/>
+			<rightAlign/>
+			<separator/>
+			<control id="IDC_SEARCH_BOX" width="120"/>
+			<button id="ID_LIBRARY_SEARCH_QUICK" text="بحث"/>
+		</toolbar>
+		<toolbar name="CLibraryTileView.Physical">
 			<rightAlign/>
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
@@ -270,6 +278,8 @@
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
 			<button id="ID_LIBRARY_SEARCH_QUICK" text="بحث"/>
+		</toolbar>
+		<toolbar name="CLibraryCollectionView.Physical">
 		</toolbar>
 		<toolbar name="CLibraryCollectionView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="تشغيل الألبوم"/>
@@ -1177,6 +1187,8 @@
 			<item id="ID_SHELL_MENU" text="قائمة ال_قشرة"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="مشارك_ة الملفات..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="إنشاء ملف torrent"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="_تصفح"/>
@@ -1187,6 +1199,8 @@
 			<item id="ID_LIBRARY_SCAN" text="ف_حص"/>
 			<item id="ID_LIBRARY_REBUILD" text="إع_ادة بناء"/>
 			<item id="ID_LIBRARY_FOLDERS" text="مشارك_ة الملفات..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="إنشاء ملف torrent"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="قائمة ال_قشرة"/>
 			<separator/>
@@ -2452,6 +2466,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="إضافة ملف(ات) محددة إلى قائمة تشغيل الوسائط"/>
 		<tip id="ID_LIBRARY_EXPLORE" message="فتح المجلد(ات) المحدد"/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="تصدير مجلد الألبوم المحدد إلى ملفات المجموعة..."/>
+		<tip id="ID_LIBRARY_FOLDER_DELETE" message="حذف مجلد الألبوم المحدد"/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="تحميل كافة الملفات في المجموعة المحددة"/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="إضافة كل ملف في مجلد/ات الألبوم المحددة إلى قائمة التشغيل الخاصة بك"/>
 		<tip id="ID_LIBRARY_FOLDER_FILE_PROPERTIES" message="عرض و تحرير الخصائص لكافة الملفات في المجلد/ات المحددة..."/>
@@ -2861,6 +2876,7 @@
 		<string id="8335" value="المصادر لهذا الملف من وراء جدار حماية"/>
 		<string id="8336" value="المصادر لهذا الملف قد لا تكون مستقرة"/>
 		<string id="8337" value="غير موثوق"/>
+		<string id="8338" value=":إنشاء"/>
 		<string id="13000" value="هل تريد فعلا حذف قواعد الأمان المحددة ؟ لا يمكن التراجع عن ذلك"/>
 		<string id="13001" value="ملفات المشاركة على الإنترنت"/>
 		<string id="16063" value="فشل تخطيط منفذ UPnP بعد 10 محاولات"/>
@@ -3215,6 +3231,9 @@
 		<string id="17041" value="Cannot send message, a connection has not been established yet."/>
 		<string id="17042" value="You have not yet filled in your user profile.  You must provide a profile before you can chat with other users.\n\nWould you like to fill in your profile now?"/>
 		<string id="17043" value="Granted upload priority to host %s."/>
+		<string id="17044" value="Solve this CAPTCHA please:"/>
+		<string id="17045" value="Wrong CAPTCHA."/>
+		<string id="17046" value="CAPTCHA accepted."/>
 		<string id="17100" value="Gnutella: Peer-to-Peer Connection"/>
 		<string id="17101" value="Gnutella: Leaf-to-Ultrapeer Connection"/>
 		<string id="17102" value="Gnutella: Ultrapeer-to-Leaf Connection"/>
@@ -3246,6 +3265,7 @@
 		<string id="17128" value="eDonkey Server"/>
 		<string id="17129" value="eDonkey (LowID)"/>
 		<string id="17130" value="eDonkey (HighID)"/>
+		<string id="17131" value="الإتصال"/>
 		<string id="17216" value="Initiating connection to eDonkey server at %s..."/>
 		<string id="17217" value="Connected to eDonkey server %s, handshaking..."/>
 		<string id="17218" value="ED2K[%s] %s"/>
@@ -3329,6 +3349,7 @@
 		<string id="18512" value="Are you sure you want to cancel/abort every download in this group?"/>
 		<string id="18513" value="You have typed an eDonkey hash value, however it is invalid. Please check it and try again."/>
 		<string id="18514" value="You have provided a SHA1 hash value which is different to the one currently associated with this download.  Are you sure you want to change the SHA1 hash now?"/>
+		<string id="18515" value="The selected download item currently has some Task attached, please wait and do it later."/>
 		<string id="19000" value="Remote access is disabled."/>
 		<string id="19001" value="You must choose a username and password."/>
 		<string id="19002" value="Unable to accept connections, URL unavailable."/>
