--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -184,6 +184,8 @@
 			<button id="ID_LIBRARY_TREE_PHYSICAL" text="Carpetes"/>
 			<button id="ID_LIBRARY_TREE_VIRTUAL" text="Organitzador"/>
 		</toolbar>
+		<toolbar name="CLibraryTree.Physical">
+		</toolbar>
 		<toolbar name="CLibraryTree.Virtual">
 			<button id="ID_LIBRARY_FOLDERS" text="Comparteix arxius..."/>
 		</toolbar>
@@ -208,6 +210,12 @@
 		<toolbar name="CLibraryHomeView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_NEW" text="Crea un àlbum..."/>
 			<button id="ID_LIBRARY_ALBUM_DELETE" text="Esborra un àlbum"/>
+			<rightAlign/>
+			<separator/>
+			<control id="IDC_SEARCH_BOX" width="120"/>
+			<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
+		</toolbar>
+		<toolbar name="CLibraryTileView.Physical">
 			<rightAlign/>
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
@@ -270,6 +278,8 @@
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
 			<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
+		</toolbar>
+		<toolbar name="CLibraryCollectionView.Physical">
 		</toolbar>
 		<toolbar name="CLibraryCollectionView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Reprodueix àlbum"/>
@@ -1177,6 +1187,8 @@
 			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="_Comparteix carpetes..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="Crea arxiu .torrent"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="_Explora"/>
@@ -1187,6 +1199,8 @@
 			<item id="ID_LIBRARY_SCAN" text="Es_caneja"/>
 			<item id="ID_LIBRARY_REBUILD" text="Re_fés"/>
 			<item id="ID_LIBRARY_FOLDERS" text="_Comparteix carpetes..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="Crea arxiu .torrent"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 			<separator/>
@@ -2443,6 +2457,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="Afegeix al reproductor de multimèdia."/>
 		<tip id="ID_LIBRARY_EXPLORE" message="Obre les carpetes seleccionades."/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Exporta aquesta carpeta a un arxiu de col·lecció..."/>
+		<tip id="ID_LIBRARY_FOLDER_DELETE" message="Esborra l'àlbum seleccionat."/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="Baixa tots els arxius de la col·lecció seleccionada."/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="Afegeix els arxius seleccionats a la llista de reproducció."/>
 		<tip id="ID_LIBRARY_FOLDER_FILE_PROPERTIES" message="Mostra o edita les propietats de tots els arxius de la carpeta seleccionada."/>
@@ -2852,6 +2867,7 @@
 		<string id="8335" value="Les fonts estan sota tallafocs"/>
 		<string id="8336" value="Les fonts poden ser inestables"/>
 		<string id="8337" value="Amb desconfiança"/>
+		<string id="8338" value="Creat:"/>
 		<string id="13000" value="Estàs segur de esborrar les normes de seguretat seleccionades? Aquesta operació no pot ser desfeta."/>
 		<string id="13001" value="Arxius compartits a Internet"/>
 		<string id="16063" value="El mapegi de ports UPnP ha fallat després de 10 intents."/>
@@ -3206,6 +3222,9 @@
 		<string id="17041" value="El missatge no ha pogut ser enviat, perquè la comunicació no ha estat establerta."/>
 		<string id="17042" value="encara no has omplert el teu perfil d'usuari. És necessari que l'ompli, per a poder parlar amb altres.\n\nHo vols fer?"/>
 		<string id="17043" value="S'ha donat prioritat a %s per a descarregar arxius."/>
+		<string id="17044" value="Solve this CAPTCHA please:"/>
+		<string id="17045" value="Wrong CAPTCHA."/>
+		<string id="17046" value="CAPTCHA accepted."/>
 		<string id="17100" value="Gnutella: Connexió Peer-to-Peer"/>
 		<string id="17101" value="Gnutella: Connexió Leaf-to-Ultrapeer"/>
 		<string id="17102" value="Gnutella: Connexió Ultrapeer-to-Leaf"/>
@@ -3237,6 +3256,7 @@
 		<string id="17128" value="Servidor eDonkey"/>
 		<string id="17129" value="eDonkey (LowID)"/>
 		<string id="17130" value="eDonkey (HighID)"/>
+		<string id="17131" value="Connexió"/>
 		<string id="17216" value="Iniciant connexió amb el servidor eDonkey en %s..."/>
 		<string id="17217" value="Connectat al servidor eDonkey %s, negociant..."/>
 		<string id="17218" value="ED2K[%s] %s"/>
@@ -3320,6 +3340,7 @@
 		<string id="18512" value="Cancel·la download but save incomplete file"/>
 		<string id="18513" value="El valor del hash de eDonkey asignat no és vàlid."/>
 		<string id="18514" value="Estàs canviant el SHA1 a un diferent a l'associat amb aquesta descàrrega. Vols continuar?"/>
+		<string id="18515" value="The selected download item currently has some Task attached, please wait and do it later."/>
 		<string id="19000" value="L'accès remot està deshabilitat."/>
 		<string id="19001" value="Has d'escollir un nom d'usuari i contrasenya."/>
 		<string id="19002" value="No es poden acceptar connexions, URL no disponible."/>
