--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -184,6 +184,8 @@
 			<button id="ID_LIBRARY_TREE_PHYSICAL" text="Kaustad"/>
 			<button id="ID_LIBRARY_TREE_VIRTUAL" text="Organiseeria"/>
 		</toolbar>
+		<toolbar name="CLibraryTree.Physical">
+		</toolbar>
 		<toolbar name="CLibraryTree.Virtual">
 			<button id="ID_LIBRARY_FOLDERS" text="Jaga faile..."/>
 		</toolbar>
@@ -208,6 +210,12 @@
 		<toolbar name="CLibraryHomeView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_NEW" text="Loo Album..."/>
 			<button id="ID_LIBRARY_ALBUM_DELETE" text="Kustuta Album"/>
+			<rightAlign/>
+			<separator/>
+			<control id="IDC_SEARCH_BOX" width="120"/>
+			<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
+		</toolbar>
+		<toolbar name="CLibraryTileView.Physical">
 			<rightAlign/>
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
@@ -270,6 +278,8 @@
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
 			<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
+		</toolbar>
+		<toolbar name="CLibraryCollectionView.Physical">
 		</toolbar>
 		<toolbar name="CLibraryCollectionView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Mängi Albumit"/>
@@ -1177,6 +1187,8 @@
 			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="Jaga _Faile..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="Loo .torrent Fail"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="_Vaata Faile"/>
@@ -1187,6 +1199,8 @@
 			<item id="ID_LIBRARY_SCAN" text="S_känni"/>
 			<item id="ID_LIBRARY_REBUILD" text="_Taasloo sisu"/>
 			<item id="ID_LIBRARY_FOLDERS" text="Jaga _Faile..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="Loo .torrent Fail"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 			<separator/>
@@ -2448,6 +2462,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="Lisa valitud failid oma meedia playlisti."/>
 		<tip id="ID_LIBRARY_EXPLORE" message="Ava valitud kaust."/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Ekspordi valitud Albumi kaust kollektsioonidesse..."/>
+		<tip id="ID_LIBRARY_FOLDER_DELETE" message="Kustuta valitud Albumi kaust."/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="Tõmba kõik valitud failid."/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="Lisa kõik failid valitud kaustast oma playlisti."/>
 		<tip id="ID_LIBRARY_FOLDER_FILE_PROPERTIES" message="Vaata ja muuda Kõiki faile valitud kaustas..."/>
@@ -2857,6 +2872,7 @@
 		<string id="8335" value="Selle faili allikad on tulemüüri taga"/>
 		<string id="8336" value="Selle faili allikad on ebastabiilsed"/>
 		<string id="8337" value="Ebausaldatav"/>
+		<string id="8338" value="Loodud:"/>
 		<string id="13000" value="Are you sure you want to delete the selected security rules? This cannot be undone."/>
 		<string id="13001" value="Files shared over the Internet"/>
 		<string id="16063" value="UPnP port mapping failed after 10 attempts."/>
@@ -3211,6 +3227,9 @@
 		<string id="17041" value="Ei saa sõnumit saata, ühendus on loomisel."/>
 		<string id="17042" value="Sa ei ole veel täitnud oma kasutaja profiili.  Sa pead enne teistega vestlemist, täitma oma profiili.\n\nKas soovid kohe oma profiili teha?"/>
 		<string id="17043" value="Antud üleslaadimisõigused kasutajale %s."/>
+		<string id="17044" value="Solve this CAPTCHA please:"/>
+		<string id="17045" value="Wrong CAPTCHA."/>
+		<string id="17046" value="CAPTCHA accepted."/>
 		<string id="17100" value="Gnutella: P2P Ühendus"/>
 		<string id="17101" value="Gnutella: Leaf-to-Ultrapeer Ühendus"/>
 		<string id="17102" value="Gnutella: Ultrapeer-to-Leaf Ühendus"/>
@@ -3242,6 +3261,7 @@
 		<string id="17128" value="eDonkey2000 Server"/>
 		<string id="17129" value="eDonkey2000 (LowID)"/>
 		<string id="17130" value="eDonkey2000 (HighID)"/>
+		<string id="17131" value="Ühendused"/>
 		<string id="17216" value="Alustan ühendust eDonkey2000 serveriga aadressiga %s..."/>
 		<string id="17217" value="Ühendatud eDonkey2000 serveriga %s, kinnitan..."/>
 		<string id="17218" value="ED2K[%s] %s"/>
@@ -3325,6 +3345,7 @@
 		<string id="18512" value="Oled kindel, et tahad peatada/tühistada terve selle allalaadimisgrupi?"/>
 		<string id="18513" value="Sa oled sisestanud eDonkey2000 hash väärtuse, mis aga on vale.  Palun kontrolli seda ja proovi uuesti."/>
 		<string id="18514" value="Sa oled andnud uue SHA1 hash väärtuse, mis on aga erinev käesolevast.  Oled kindel, et tahad muuta SHA1 hash -i?"/>
+		<string id="18515" value="The selected download item currently has some Task attached, please wait and do it later."/>
 		<string id="19000" value="Kaugtöö ei ole käivitatud."/>
 		<string id="19001" value="Sa pead valima kasutajanime ja salasõna."/>
 		<string id="19002" value="Ei saa ühendust, URL ei ole saadaval."/>
