--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -184,6 +184,8 @@
 			<button id="ID_LIBRARY_TREE_PHYSICAL" text="Dossiers"/>
 			<button id="ID_LIBRARY_TREE_VIRTUAL" text="Organiseur"/>
 		</toolbar>
+		<toolbar name="CLibraryTree.Physical">
+		</toolbar>
 		<toolbar name="CLibraryTree.Virtual">
 			<button id="ID_LIBRARY_FOLDERS" text="Partager des fichiers..."/>
 		</toolbar>
@@ -208,6 +210,12 @@
 		<toolbar name="CLibraryHomeView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_NEW" text="Créer un album..."/>
 			<button id="ID_LIBRARY_ALBUM_DELETE" text="Supprimer l'album"/>
+			<rightAlign/>
+			<separator/>
+			<control id="IDC_SEARCH_BOX" width="120"/>
+			<button id="ID_LIBRARY_SEARCH_QUICK" text="Trouver"/>
+		</toolbar>
+		<toolbar name="CLibraryTileView.Physical">
 			<rightAlign/>
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
@@ -270,6 +278,8 @@
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
 			<button id="ID_LIBRARY_SEARCH_QUICK" text="Trouver"/>
+		</toolbar>
+		<toolbar name="CLibraryCollectionView.Physical">
 		</toolbar>
 		<toolbar name="CLibraryCollectionView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Lire l'album"/>
@@ -1177,6 +1187,8 @@
 			<item id="ID_SHELL_MENU" text="_Menu"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="_Partager des fichiers..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="Créer un fichier .torrent"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="E_xplorer"/>
@@ -1187,6 +1199,8 @@
 			<item id="ID_LIBRARY_SCAN" text="P_arcourir"/>
 			<item id="ID_LIBRARY_REBUILD" text="_Reconstruire"/>
 			<item id="ID_LIBRARY_FOLDERS" text="_Partager des fichiers..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="Créer un fichier .torrent"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="_Menu"/>
 			<separator/>
@@ -2453,6 +2467,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="Ajouter à votre liste de lecture cette sélection de fichiers."/>
 		<tip id="ID_LIBRARY_EXPLORE" message="Ouvrir cette sélection de dossiers."/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Exporter le dossier « album » sélectionné dans un fichier collection..."/>
+		<tip id="ID_LIBRARY_FOLDER_DELETE" message="Supprimer le dossier « album » sélectionné."/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="Télécharger tous les fichiers dans la collection sélectionnée."/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="Ajouter tous les fichiers de cette sélection de dossiers « album » à votre liste de lecture."/>
 		<tip id="ID_LIBRARY_FOLDER_FILE_PROPERTIES" message="Voir et modifier les propriétés de tous les fichiers de cette sélection de dossiers..."/>
@@ -2862,6 +2877,7 @@
 		<string id="8335" value="Les sources pour ce fichier sont derrière un pare-feu"/>
 		<string id="8336" value="Les sources pour ce fichier sont peut-être instables"/>
 		<string id="8337" value="Non fiable"/>
+		<string id="8338" value="Créé :"/>
 		<string id="13000" value="Êtes-vous certain de vouloir supprimer ces règles ? Il ne sera pas possible d'annuler cette suppression."/>
 		<string id="13001" value="Fichiers partagés sur Internet"/>
 		<string id="16063" value="Au bout de dix essais, Shareaza n'a pas réussi à configurer votre pare-feu ou routeur avec l'UPnP"/>
@@ -3216,6 +3232,9 @@
 		<string id="17041" value="Impossible d'envoyer le message, aucune connexion n'est encore établie."/>
 		<string id="17042" value="Vous n'avez pas encore rempli votre profil utilisateur. Vous devez envoyer un profil avant de pouvoir discuter avec les autres utilisateurs.\n\nVoulez-vous remplir votre profil utilisateur maintenant ?"/>
 		<string id="17043" value="Envoi prioritaire établi pour l'hôte %s."/>
+		<string id="17044" value="Solve this CAPTCHA please:"/>
+		<string id="17045" value="Wrong CAPTCHA."/>
+		<string id="17046" value="CAPTCHA accepted."/>
 		<string id="17100" value="Gnutella : Connexion Pair à Pair"/>
 		<string id="17101" value="Gnutella : Connexion Terminal-vers-Ultrapair"/>
 		<string id="17102" value="Gnutella : Connexion Ultrapair-vers-Terminal"/>
@@ -3247,6 +3266,7 @@
 		<string id="17128" value="Serveur eDonkey"/>
 		<string id="17129" value="eDonkey (LowID)"/>
 		<string id="17130" value="eDonkey (HighID)"/>
+		<string id="17131" value="Mes Connexions"/>
 		<string id="17216" value="Initialisation d'une connexion au serveur eDonkey %s..."/>
 		<string id="17217" value="Connecté au serveur eDonkey %s, poignée de main..."/>
 		<string id="17218" value="ED2K[%s] %s"/>
@@ -3330,6 +3350,7 @@
 		<string id="18512" value="Annuler le téléchargement mais enregistrer le ou les fichiers incomplets"/>
 		<string id="18513" value="Vous avez tapez une valeur de hash eDonkey, cependant elle est invalide. Merci de la vérifier et de recommencer."/>
 		<string id="18514" value="Vous avez fourni une valeur de hachage SHA1 qui est différente de celle actuellement associée avec ce téléchargement. Êtes-vous certain de vouloir changer le hachage SHA1 maintenant ?"/>
+		<string id="18515" value="The selected download item currently has some Task attached, please wait and do it later."/>
 		<string id="19000" value="L'accès à distance est désactivé."/>
 		<string id="19001" value="Vous devez choisir un nom d'utilisateur et un mot de passe."/>
 		<string id="19002" value="Impossible d'accepter des connexions, URL indisponible."/>
