--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -184,6 +184,8 @@
 			<button id="ID_LIBRARY_TREE_PHYSICAL" text="Cartelle"/>
 			<button id="ID_LIBRARY_TREE_VIRTUAL" text="Organizzatore"/>
 		</toolbar>
+		<toolbar name="CLibraryTree.Physical">
+		</toolbar>
 		<toolbar name="CLibraryTree.Virtual">
 			<button id="ID_LIBRARY_FOLDERS" text="Condividi file..."/>
 		</toolbar>
@@ -208,6 +210,12 @@
 		<toolbar name="CLibraryHomeView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_NEW" text="Crea album..."/>
 			<button id="ID_LIBRARY_ALBUM_DELETE" text="Elimina album"/>
+			<rightAlign/>
+			<separator/>
+			<control id="IDC_SEARCH_BOX" width="120"/>
+			<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
+		</toolbar>
+		<toolbar name="CLibraryTileView.Physical">
 			<rightAlign/>
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
@@ -270,6 +278,8 @@
 			<separator/>
 			<control id="IDC_SEARCH_BOX" width="120"/>
 			<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
+		</toolbar>
+		<toolbar name="CLibraryCollectionView.Physical">
 		</toolbar>
 		<toolbar name="CLibraryCollectionView.Virtual">
 			<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Esegui album"/>
@@ -1177,6 +1187,8 @@
 			<item id="ID_SHELL_MENU" text="Menu s_hell"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="Condividi file..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="Crea file ._torrent"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="_Esplora"/>
@@ -1187,6 +1199,8 @@
 			<item id="ID_LIBRARY_SCAN" text="_Scansione"/>
 			<item id="ID_LIBRARY_REBUILD" text="Ricos_truisci"/>
 			<item id="ID_LIBRARY_FOLDERS" text="Condividi file..."/>
+			<separator/>
+			<item id="ID_LIBRARY_CREATETORRENT" text="Crea file ._torrent"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="Menu s_hell"/>
 			<separator/>
@@ -2454,6 +2468,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="Aggiungi i file selezionati alla playlist."/>
 		<tip id="ID_LIBRARY_EXPLORE" message="Apri le cartelle selezionate."/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Esporta la cartella album selezionata a file di collezione..."/>
+		<tip id="ID_LIBRARY_FOLDER_DELETE" message="Elimina la cartella album selezionata."/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="Scarica tutti i file nella collezione selezionata."/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="Aggiungi ogni file della cartella selezionata nella playlist."/>
 		<tip id="ID_LIBRARY_FOLDER_FILE_PROPERTIES" message="Visualizza e modifica le proprietà di tutti i file nelle cartelle selezionate..."/>
@@ -2863,6 +2878,7 @@
 		<string id="8335" value="I sorgenti di questo file sono firewallati"/>
 		<string id="8336" value="I sorgenti di questo file possono essere instabili"/>
 		<string id="8337" value="Non sicuro"/>
+		<string id="8338" value="Creato:"/>
 		<string id="13000" value="Sei sicuro di voler cancellare le regole di sicurezza selezionate?  Ciò non può essere annullato."/>
 		<string id="13001" value="File condivisi su internet"/>
 		<string id="16063" value="La mappatura delle porta UPnP è fallita dopo 10 tentativi."/>
@@ -3217,6 +3233,9 @@
 		<string id="17041" value="Impossibile inviare un messaggio, la connessione non è stata ancora stabilita."/>
 		<string id="17042" value="Non hai ancora compilato il tuo profilo utente. Devi provvedere a compilarlo prima di iniziare una sessione di chat con gli altri utenti.\n\nDesideri compilare il tuo profilo ora?"/>
 		<string id="17043" value="Concessa priorità in upload all'host %s."/>
+		<string id="17044" value="Solve this CAPTCHA please:"/>
+		<string id="17045" value="Wrong CAPTCHA."/>
+		<string id="17046" value="CAPTCHA accepted."/>
 		<string id="17100" value="Gnutella: Connessione Peer-a-Peer"/>
 		<string id="17101" value="Gnutella: Connessione Leaf-a-Ultrapeer"/>
 		<string id="17102" value="Gnutella: Connessione Ultrapeer-a-Leaf"/>
@@ -3248,6 +3267,7 @@
 		<string id="17128" value="Server eDonkey"/>
 		<string id="17129" value="eDonkey (ID Basso)"/>
 		<string id="17130" value="eDonkey (ID Alto)"/>
+		<string id="17131" value="Connessione"/>
 		<string id="17216" value="Avvio di una connessione a un server eDonkey con %s in corso..."/>
 		<string id="17217" value="Connesso al server eDonkey %s, negoziazione in corso..."/>
 		<string id="17218" value="ED2K[%s] %s"/>
@@ -3331,6 +3351,7 @@
 		<string id="18512" value="Annulla download ma salva file incompleto/i"/>
 		<string id="18513" value="Hai inserito un hash eDonkey non valido. Controlla e riprova di nuovo."/>
 		<string id="18514" value="Hai inserito un hash SHA1 diverso da quello che è correntemente associato a questo download. Desideri modificare l'hash SHA1 ora?"/>
+		<string id="18515" value="The selected download item currently has some Task attached, please wait and do it later."/>
 		<string id="19000" value="Accesso remoto è disabilitato."/>
 		<string id="19001" value="Devi scegliere un nome utente e password."/>
 		<string id="19002" value="Impossibile accettare connessioni, URL non disponibile."/>
